--- a/style.css
+++ b/style.css
@@ -217,3 +217,47 @@ h1{
 .bar--50{
     width: 50%;
 }
+
+/* ---- PROFILE QUERIES ----*/
+
+@media screen and (min-width:600px) {
+    .profile-wrapper{
+        flex-direction: row;
+        padding: 20px;
+        background-color: transparent;
+        min-height: 90dvh;
+        margin: auto;
+    }
+
+    h1{
+        font-size: 3rem;
+        margin: 0;
+    }
+
+    .profile__description p{
+        padding: 0px 20px;
+    }
+
+    .profile__data-container{
+        background-color: #fff;
+        display: flex;
+        align-items: center;
+        border-radius: 0 20px 20px 0;
+    }
+
+    .profile__data{
+        max-width: 600px;
+    }
+
+    .profile__img{
+        min-height: 100%;
+        min-width: 100%;
+        border-radius: 20px 0 0 25px;
+    }
+
+    .profile__skill span{
+        margin: initial;
+    }
+}
+
+/* ---- PROFILE END ----*/
