--- a/style.css
+++ b/style.css
@@ -261,3 +261,51 @@ h1{
 }
 
 /* ---- PROFILE END ----*/
+
+/* ---- PORTFOLIO STATIC ----*/
+
+.portfolio{
+    background-color: var(--main-alt);
+    color: var(--main-secundary);
+    min-height: 100dvh;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: space-evenly;
+}
+
+.portfolio__title{
+    font-size: 2.5rem;
+}
+
+.portfolio__project-container{
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 20px;
+    width: 100%;
+    padding: 12px;
+    max-width: 1200px;
+    margin: auto;
+}
+
+.portfolio__project{
+    background-image: linear-gradient(#0007, #0008), url('https://picsum.photos/801');
+    background-size: cover;
+    background-position: center;
+    border-radius: 12px;
+    min-height: 25dvh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.portfolio__project-name{
+    font-size: 2rem;
+    text-shadow: 0px 0px 25px #000;
+    color: #fff;
+}
+
+.portfolio__project:hover{
+    opacity: 0.7;
+}
