--- a/style.css
+++ b/style.css
@@ -309,3 +309,21 @@ h1{
 .portfolio__project:hover{
     opacity: 0.7;
 }
+
+/* ---- PORTFOLIO QUERIES ----*/
+
+@media screen and (min-width: 600px) {
+    .portfolio__project-container{
+        grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+    }
+    .portfolio__project:first-child{
+        grid-column: span 2;
+        grid-row: span 2;
+    }
+
+    .portfolio__project:last-child{
+        grid-column: span 4;
+    }
+}
+
+/* ---- PORTFOLIO END ----*/
