--- a/style.css
+++ b/style.css
@@ -327,3 +327,67 @@ h1{
 }
 
 /* ---- PORTFOLIO END ----*/
+
+/* ---- CONTACT SECTION ---- */
+
+.contact {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 90dvh;
+    background-color: var(--main-secundary);
+    padding: 20px;
+}
+
+.contact__card {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 12px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+    max-width: 400px;
+    width: 100%;
+    text-align: center;
+}
+
+.contact__card h2 {
+    color: var(--main-bg-principal);
+    margin-bottom: 15px;
+}
+
+.contact__form {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.contact__group {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+}
+
+.contact__group label {
+    font-weight: bold;
+    color: var(--main-alt);
+    margin-bottom: 5px;
+}
+
+.contact__group input,
+.contact__group textarea {
+    border: 1px solid var(--main-bg-principal);
+    border-radius: 6px;
+    padding: 10px;
+    font-size: 1rem;
+    outline: none;
+}
+.contact__group textarea{
+    max-width: 100%;
+}
+.contact__button {
+    background-color: var(--main-bg-principal);
+    color: #fff;
+    border: none;
+    padding: 12px;
+    font-size: 1rem;
+    border-radius: 6px;
+}
